# vsx_data_warehouse

./: .gitignore  README.md  config.py  inventor_mixpannel_data.py  job_mixpannel_to_pg.py  preprocess_env_info.py  pyproject.toml
dao/: pg_dao.py
data_processor/: aws_file_processor.py  base_file_processor.py  local_file_processor.py
helper/: dw_pg_helper.py  mixpannel_helper.py  pg_mixpanel_helper.py
schema/: mixpanel.py  mixpanel_schema.py
utility/: constants.py  datetime_utility.py  env_util.py  logger.py  s3_utility.py  spark_util.py
