[tool.poetry]
name = "vsx_data_warehouse"
version = "0.1.0"
description = ""
authors = ["Yvette Yu <yvette.sh.yu@viewsonic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.28"
mixpanel = "^4.10.0"
numpy = "^1.26.3"
pandas = "^2.2.0"
psycopg2-binary = "^2.9.9"
pyspark = "^3.5.0"
sqlalchemy = "^2.0.25"
requests = "^2.31.0"
jaguar = {git = "git@github.com:VSX-ViewSonic/jaguar", rev = "0.5.0"}
rich = "^13.7.0"
python-dotenv = "^1.0.1"
pycountry = "^23.12.11"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
